Sidebar : fix dark mode

--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -1,11 +1,3 @@
 .nav-main-heading {
     padding-top: 1rem;
 }
-
-.subitem-icon {
-    margin-left: 0;
-}
-.no-padding {
-    padding: 0 0 0 5px;
-    font-size: 0.8em;
-}
